--- a/src/main/webapp/WEB-INF/css/actDetail.css
+++ b/src/main/webapp/WEB-INF/css/actDetail.css
@@ -1,4 +1,3 @@
-
 /*
   ------------------------------------------------
   PVII Slideshow Magic
@@ -16,17 +15,24 @@ The Root Slideshow DIV
     height: auto;
     position: relative;
     z-index: 100;
-    font-size:12px;
+    font-size: 12px;
     BORDER: #dddddd 1px solid;
-    padding:6px;
+    padding: 6px;
     overflow: hidden;
 }
+
 /*Extra Wrappers - used for the Shadow Box style only. DO NOT EDIT.*/
-#p7ssm_w2 {position: relative; z-index: 100;}
+#p7ssm_w2 {
+    position: relative;
+    z-index: 100;
+}
+
 /*
 NAV MENU
 */
-#p7ssm_nav_wrapper {}
+#p7ssm_nav_wrapper {
+}
+
 /*The Drop Down Menu DIV*/
 #p7SSMwnav {
     position: absolute;
@@ -37,15 +43,26 @@ NAV MENU
     opacity: 1;
     top: auto;
 }
+
 /*
 The Inner Nav Menu Wrapper... Necessary for the script
 The Script will hide this element before the page loads
 Set value to "none" if you want to hide the nav bar in
 Dreamweaver, but it will be hidden if script is disabled.
 */
-#p7ssm_navList {display:block;}
-#p7ssm_navList ul {margin: 0px; padding: 0px; font-size: 12px;}
-#p7ssm_navList li {list-style-type: none;}
+#p7ssm_navList {
+    display: block;
+}
+
+#p7ssm_navList ul {
+    margin: 0px;
+    padding: 0px;
+    font-size: 12px;
+}
+
+#p7ssm_navList li {
+    list-style-type: none;
+}
 
 /*THUMBNAILS*/
 #p7SSMwhmb {
@@ -53,44 +70,125 @@ Dreamweaver, but it will be hidden if script is disabled.
     filter: alpha(opacity=100);
     opacity: 1.0;
 }
-#p7ssm_thumb_wrapper {}
+
+#p7ssm_thumb_wrapper {
+}
+
 /*Thumbnail Drag Bar*/
-#p7ssm_dragbar {}
-#p7ssm_dragbar span {}
+#p7ssm_dragbar {
+}
+
+#p7ssm_dragbar span {
+}
+
 /*Thumbnail Preview*/
-#p7ssm_preview {}
+#p7ssm_preview {
+}
+
 /*Preview Table - DO NOT EDIT*/
-#p7ssm_preview table {}
-#p7ssm_preview td {}
+#p7ssm_preview table {
+}
+
+#p7ssm_preview td {
+}
+
 #p7ssm_preview img {
     padding: 2px;
     border: 1px solid #666;
     display: block;
-    width:100px;
-    height:100px;
+    width: 100px;
+    height: 100px;
 }
-.p7ssm_sectionTrigger {display:none;}
+
+.p7ssm_sectionTrigger {
+    display: none;
+}
 
 /*Thumbnail Matrix 锟叫憋拷图片锟斤拷锟斤拷锟斤拷锟斤拷 */
-.p7ssm_thumb_section {width:392px;}
-.p7ssm_thumb_section ul {margin: 0px; padding: 0px;}
-.p7ssm_thumb_section li {list-style-type: none; float: left; margin: 2px 6px 2px 0px;}
-.p7ssm_thumb_section a {padding: 1px; float: left; border: 1px solid #EAEAEA;}
+.p7ssm_thumb_section {
+    width: 392px;
+}
+
+.p7ssm_thumb_section ul {
+    margin: 0px;
+    padding: 0px;
+}
+
+.p7ssm_thumb_section li {
+    list-style-type: none;
+    float: left;
+    margin: 2px 6px 2px 0px;
+}
+
+.p7ssm_thumb_section a {
+    padding: 1px;
+    float: left;
+    border: 1px solid #EAEAEA;
+}
+
 /*\Hide from IE5 Mac*/
-.p7ssm_thumb_section a {float: none; display: block;}
+.p7ssm_thumb_section a {
+    float: none;
+    display: block;
+}
+
 /*End Hide*/
-.p7ssm_thumb_section a:hover {border:3px solid #FF0000;}
-.p7ssm_thumb_section a:hover img {height: 63px; width: 84px; padding: 0; border: 0; display: block;}
-.p7ssm_thumb_section .down {border:3px solid #B6E000!important; cursor: default;}
-.p7ssm_thumb_section .down img {height: 63px; width: 84px; padding: 0; border: 0; display: block;}
-.p7ssm_thumb_section img {height: 67px; width: 88px; padding: 0; border: 0; display: block;}
-.p7ssm_clearThumbs {clear: both; height: 0; line-height: 0.0; font-size: 0;}
+.p7ssm_thumb_section a:hover {
+    border: 3px solid #FF0000;
+}
+
+.p7ssm_thumb_section a:hover img {
+    height: 63px;
+    width: 84px;
+    padding: 0;
+    border: 0;
+    display: block;
+}
+
+.p7ssm_thumb_section .down {
+    border: 3px solid #B6E000 !important;
+    cursor: default;
+}
+
+.p7ssm_thumb_section .down img {
+    height: 63px;
+    width: 84px;
+    padding: 0;
+    border: 0;
+    display: block;
+}
+
+.p7ssm_thumb_section img {
+    height: 67px;
+    width: 88px;
+    padding: 0;
+    border: 0;
+    display: block;
+}
+
+.p7ssm_clearThumbs {
+    clear: both;
+    height: 0;
+    line-height: 0.0;
+    font-size: 0;
+}
 
 /*Toolbar Controls */
-#p7ssm_toolbar {display:none;}
-#p7ssm_tools {}
-#p7ssm_toolbar em {display: none;}
-#p7ssm_toolbar a {display: block;}
+#p7ssm_toolbar {
+    display: none;
+}
+
+#p7ssm_tools {
+}
+
+#p7ssm_toolbar em {
+    display: none;
+}
+
+#p7ssm_toolbar a {
+    display: block;
+}
+
 /*The Icon that Tgoggles the Nav Menu open and closed*/
 #p7SSMtnav {
     display: block;
@@ -99,21 +197,25 @@ Dreamweaver, but it will be hidden if script is disabled.
     background-image: url(images/dt_01.jpg);
     background-repeat: no-repeat;
 }
+
 /*The Nav Bar Icon down state*/
 #p7SSMtnav.down {
     background-position: left bottom;
 }
+
 /*The Icon that Tgoggles the Thumbnail Panel open and closed*/
 #p7SSMthmb {
-    background-image: url(mages/buttom/dt_01.jpg);
+    background-image: url(images/buttom/dt_01.jpg);
     background-repeat: no-repeat;
     height: 36px;
     width: 23px;
 }
+
 /*The Thumbnail Icon down state*/
 #p7SSMthmb.down {
     background-position: left bottom !important;
 }
+
 #p7ssm_first {
     background-image: url(images/buttom/first.jpg);
     background-repeat: no-repeat;
@@ -121,41 +223,48 @@ Dreamweaver, but it will be hidden if script is disabled.
     width: 22px;
     background-position: left top;
 }
+
 #p7ssm_prev {
     background-image: url(images/buttom/prew.jpg);
     background-repeat: no-repeat;
     height: 36px;
     width: 18px;
 }
+
 .p7ssm_play {
     background-image: url(images/buttom/play.jpg);
     background-repeat: no-repeat;
     height: 36px;
     width: 28px;
 }
+
 .p7ssm_pause {
     background-image: url(images/buttom/pause.jpg);
     background-repeat: no-repeat;
     height: 36px;
     width: 28px;
 }
+
 #p7ssm_next {
     background-image: url(images/buttom/next.jpg);
     background-repeat: no-repeat;
     height: 36px;
     width: 18px;
 }
+
 #p7ssm_last {
     background-image: url(images/buttom/last.jpg);
     background-repeat: no-repeat;
     height: 36px;
     width: 28px;
 }
+
 #p7ssm_counter {
     font-size: 11px;
     color: #888888;
     padding: 0px;
 }
+
 #p7ssm_slidechannel {
     background-image: url(images/buttom/speedchannel.jpg);
     background-repeat: no-repeat;
@@ -165,6 +274,7 @@ Dreamweaver, but it will be hidden if script is disabled.
     top: 0px;
     position: relative;
 }
+
 #p7ssm_slider {
     position: absolute;
     top: 10px;
@@ -173,6 +283,7 @@ Dreamweaver, but it will be hidden if script is disabled.
     height: 17px;
     width: 8px;
 }
+
 #p7ssm_slidebar {
     background-image: url(http://sports.qianlong.com/ui/ssm/p7ssm/img/p7ssm_slider.gif);
     background-repeat: no-repeat;
@@ -180,6 +291,7 @@ Dreamweaver, but it will be hidden if script is disabled.
     width: 8px;
     cursor: default;
 }
+
 /*The Hover state for all the toolbar icons*/
 #p7ssm_first:hover, #p7ssm_prev:hover,
 .p7ssm_play:hover, .p7ssm_pause:hover,
@@ -187,50 +299,60 @@ Dreamweaver, but it will be hidden if script is disabled.
 #p7ssm_slidebar:hover, #p7SSMthmb:hover, #p7SSMtnav:hover {
     background-position: left bottom;
 }
+
 /*SLIDER TOOLTIP*/
-#p7ssm_speed{
-    position:absolute;
-    display:none;
-    left:0px;
-    top:36px;
-    padding:4px;
-    background-color:#333333;
-    border:1px solid #000;
-    color:#CCCCCC;
+#p7ssm_speed {
+    position: absolute;
+    display: none;
+    left: 0px;
+    top: 36px;
+    padding: 4px;
+    background-color: #333333;
+    border: 1px solid #000;
+    color: #CCCCCC;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 10px;
     z-index: 100;
     filter: alpha(opacity=75);
     opacity: 0.75;
 }
+
 /*FULLSIZE IMAGE */
 /*\FS TABLE DO NOT EDIT - and hide from IE5 Mac*/
 #p7ssm_fstbl {
     margin: 0;
 }
+
 /*End Hiding*/
 /*The Outer Wrapper for Fullsize Image*/
 #p7ssm_fullsize {
     padding: 0;
-    margin:0;
-    width:392px;
+    margin: 0;
+    width: 392px;
 }
+
 /*Animating Box Wrapper for Fullsize Image*/
 #p7ssm_fsc {
     margin: 0;
-    width:392px;
+    width: 392px;
     padding: 0;
 }
+
 /*Inner Wrapper for Fullsize Image*/
 #p7ssm_fsw {
     padding: 0px;
-    margin:0px;
+    margin: 0px;
 }
+
 #p7ssm_fsimg img {
-    width:404px;
-    height:303px;
+    width: 404px;
+    height: 303px;
 }
-#p7ssm_description {width:404px;height:28px;}
+
+#p7ssm_description {
+    width: 404px;
+    height: 28px;
+}
 
 #p7ssm_cf {
     position: absolute;
@@ -239,110 +361,129 @@ Dreamweaver, but it will be hidden if script is disabled.
     top: 0;
     z-index: 99;
 }
+
 /*Firefox Strict Mode Box Model Fix - DO NOT EDIT*/
 #p7ssm_cf img {
     display: block;
 }
+
 /*The Fullsize Image*/
 #p7ssm_fsc img {
     border: 0;
 }
+
 /*\Firefox Fix - Hide from IE5 Mac*/
 #p7ssm_fsc img {
     display: block;
 }
+
 /*End Hiding*/
 /* Description Styles */
 #p7ssm_description {
-    margin:-24px 0 0 0;
-    background:#FFFFFF;
+    margin: -24px 0 0 0;
+    background: #FFFFFF;
     filter: alpha(opacity=60);
     opacity: 0.60;
     padding: 0px 0px;
     color: #333333;
     line-height: 1.5em;
     display: none;
-    text-align:center;
+    text-align: center;
 }
+
 /*Description Paragraphs*/
 #p7ssm_description p {
     margin: 6px 0;
     color: #333333;
 }
+
 /*Description Links*/
 #p7ssm_description a {
     color: #333333;
 }
+
 /*Hiiden Link for Fullsize Image. DO NOT EDIT*/
 .p7ssm_lk {
-    display:none;
+    display: none;
 }
+
 /*Hidden Description Source. DO NOT EDIT*/
 .p7ssm_fd {
     width: 392px;
-    font-size:12px;
-    display:none;
+    font-size: 12px;
+    display: none;
     padding: 0;
 }
+
 /*The Loading Progrees Bar. DO NOT EDIT*/
 #p7ssm_loading {
-    position:absolute;
-    left:0px;
-    top:0px;
+    position: absolute;
+    left: 0px;
+    top: 0px;
     visibility: hidden;
     z-index: 100;
 }
+
 .border {
     border: 1px solid #CCCCCC;
 }
-#p7ssm_fsc{height: auto; width: 392px;}
 
+#p7ssm_fsc {
+    height: auto;
+    width: 392px;
+}
 
-@media screen and (max-width:900px){
-    #p7ssm_fsimg img,#p7ssm_fd,#p7ssm_fullsize,#p7ssm_fstbl,#p7ssm_fsw{
-        width:100% !important;
-        height: auto !important;
-    }
-    #p7SSMwhmb{
-        width:98% !important;
-        height: auto !important;
-    }
-    .p7ssm_thumb_section{
-        width:100% !important;
+@media screen and (max-width: 900px) {
+    #p7ssm_fsimg img, #p7ssm_fd, #p7ssm_fullsize, #p7ssm_fstbl, #p7ssm_fsw {
+        width: 100% !important;
         height: auto !important;
     }
 
-    #p7ssm_cf{
-        width:99% !important;
-        height: 0 !important;
-        padding-bottom: 75%  !important;
-        overflow: hidden  !important;
+    #p7SSMwhmb {
+        width: 98% !important;
+        height: auto !important;
     }
-    #p7ssm_fsc,#p7ssm_fsw{
-        width:100% !important;
-        height: 0 !important;
-        padding-bottom: 75%  !important;
-        overflow: hidden  !important;
+
+    .p7ssm_thumb_section {
+        width: 100% !important;
+        height: auto !important;
     }
-    #p7ssm{
-        width:97% !important;
+
+    #p7ssm_cf {
+        width: 99% !important;
         height: 0 !important;
-        padding-bottom: 97%  !important;
-        overflow: hidden  !important;
+        padding-bottom: 75% !important;
+        overflow: hidden !important;
+    }
+
+    #p7ssm_fsc, #p7ssm_fsw {
+        width: 100% !important;
+        height: 0 !important;
+        padding-bottom: 75% !important;
+        overflow: hidden !important;
+    }
+
+    #p7ssm {
+        width: 97% !important;
+        height: 0 !important;
+        padding-bottom: 97% !important;
+        overflow: hidden !important;
         padding: 1%;
     }
 
-    .p7ssm_thumb_section a{
-        width:100% !important;
+    .p7ssm_thumb_section a {
+        width: 100% !important;
         height: auto !important;
     }
-    .p7ssm_thumb_section a img{
-        width:100% !important;
+
+    .p7ssm_thumb_section a img {
+        width: 100% !important;
         height: auto !important;
-        margin-left:0px ;
+        margin-left: 0px;
 
     }
-    .p7ssm_thumb_section li{
-        width:25% !important;
+
+    .p7ssm_thumb_section li {
+        width: 25% !important;
     }
 }
